--- a/src/main/ui/src/css/App.css
+++ b/src/main/ui/src/css/App.css
@@ -1,16 +1,7 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  position: relative;
+  min-height: 100vh;
 }
 
 .App-header {
@@ -28,11 +19,9 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Content-wrap {
+  padding-top: 5vh;
+  padding-bottom: 20vh;
+  min-height: 80vh;
+  background-color: #10141e;
 }
